<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_menu_view">

        <TextView
            android:id="@+id/history"
            style="@style/MenuStyle"
            android:text="@string/history_name"
            android:background="?android:attr/selectableItemBackground"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_menu_view">

        <TextView
            android:id="@+id/gallery"
            style="@style/MenuStyle"
            android:text="@string/gallery_name"
            android:background="?android:attr/selectableItemBackground"/>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_menu_view">

        <TextView
            android:id="@+id/ways"
            style="@style/MenuStyle"
            android:text="@string/ways_name"
            android:background="?android:attr/selectableItemBackground"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_menu_view">

        <TextView
            android:id="@+id/accommodation"
            style="@style/MenuStyle"
            android:text="@string/accommodation_name"
            android:background="?android:attr/selectableItemBackground"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_menu_view">

        <TextView
            android:id="@+id/contact"
            style="@style/MenuStyle"
            android:text="@string/contact_name"
            android:background="?android:attr/selectableItemBackground"/>

    </FrameLayout>


</LinearLayout>